# erd-smith

./: .gitignore  LICENSE  README.md  pyproject.toml
erd_smith/: __init__.py  cli.py  diagram.py  differ.py  linter.py
erd_smith/parsers/: __init__.py  base.py  django_parser.py  sql_parser.py
